--- a/notebooks/SWIS_DATA_ANALYSIS.ipynb
+++ b/notebooks/SWIS_DATA_ANALYSIS.ipynb
@@ -2506,7 +2506,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3a56eccf",
+   "id": "083d21f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3961,7 +3961,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "0149c749",
+   "id": "5ae2174b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4885,7 +4885,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "68e7e2e4",
+   "id": "ff664911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4895,7 +4895,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ef29dade",
+   "id": "228e849e",
    "metadata": {},
    "outputs": [
     {
@@ -6032,7 +6032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e197756",
+   "id": "7a7c7a5d",
    "metadata": {},
    "source": [
     "## Plot stored data"
@@ -6041,7 +6041,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "1e80fd7d",
+   "id": "8cc629a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6051,7 +6051,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "ed057748",
+   "id": "4620c0b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6061,7 +6061,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "938b6286",
+   "id": "6058b741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6073,7 +6073,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "b9425a97",
+   "id": "1e00980b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6083,7 +6083,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "17e3afeb",
+   "id": "566faf24",
    "metadata": {},
    "outputs": [
     {
@@ -6116,7 +6116,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "7354557d",
+   "id": "387bc96a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6142,7 +6142,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "14b42dd7",
+   "id": "676c010e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6171,7 +6171,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "b466b0a7",
+   "id": "dd5310f1",
    "metadata": {},
    "outputs": [
     {
@@ -6193,7 +6193,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "04ee21ed",
+   "id": "b3c7835c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6208,7 +6208,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "075c3115",
+   "id": "bd074bf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6222,7 +6222,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "c103bdd6",
+   "id": "172e111c",
    "metadata": {},
    "outputs": [
     {
@@ -6256,7 +6256,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1c9adaba",
+   "id": "b996a92d",
    "metadata": {},
    "outputs": [
     {
@@ -6288,7 +6288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90014d8",
+   "id": "1dbe0d8a",
    "metadata": {},
    "source": [
     "## Sort postcodes from South to North"
@@ -6297,7 +6297,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "f71adaf3",
+   "id": "17ddae6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6308,7 +6308,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "fe36699f",
+   "id": "1589a8a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6320,7 +6320,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3c22d34d",
+   "id": "240ebd32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6330,7 +6330,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e974abdc",
+   "id": "f9b513c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6340,7 +6340,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "568b9bd4",
+   "id": "c7d18812",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6350,7 +6350,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "8de1c5dc",
+   "id": "e32a274c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6364,7 +6364,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "b285695e",
+   "id": "2cd2eafc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6373,7 +6373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d3c91dc",
+   "id": "5d67aaea",
    "metadata": {},
    "source": [
     "## Plot Forecasts"
@@ -6382,7 +6382,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "9a426c98",
+   "id": "2bc78d91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6392,7 +6392,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "0a8dd840",
+   "id": "e5ac0ca1",
    "metadata": {},
    "outputs": [
     {
@@ -6624,7 +6624,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "21d0748a",
+   "id": "ff15012e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6635,7 +6635,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "f95b8060",
+   "id": "972193a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6647,7 +6647,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "6bc94cc8",
+   "id": "5c0a565e",
    "metadata": {},
    "outputs": [
     {
@@ -28442,7 +28442,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "dfc9c534",
+   "id": "21904e87",
    "metadata": {},
    "outputs": [
     {
@@ -35863,7 +35863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53a93083",
+   "id": "ee5b5119",
    "metadata": {},
    "source": [
     "## Checking impact of certain postcodes"
@@ -35872,7 +35872,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "06168f8c",
+   "id": "c9dbe74c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35882,7 +35882,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "840b5ff9",
+   "id": "e9d9d2ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35892,7 +35892,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "20203fc1",
+   "id": "abd900cc",
    "metadata": {},
    "outputs": [
     {
@@ -36304,7 +36304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b791bbbf",
+   "id": "820d6a17",
    "metadata": {},
    "source": [
     "Let's remove the dominating postcodes"
@@ -36313,7 +36313,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "30f8fe4d",
+   "id": "8e5f71af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36323,7 +36323,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "00b230b7",
+   "id": "c66213c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36334,7 +36334,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "ff7f3dc9",
+   "id": "45f400f1",
    "metadata": {},
    "outputs": [
     {
@@ -36445,7 +36445,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "d7de3bf8",
+   "id": "55606a1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36455,7 +36455,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "691aaee3",
+   "id": "0b032d0b",
    "metadata": {},
    "outputs": [
     {
@@ -36658,7 +36658,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "6bb5abf7",
+   "id": "048af219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36668,7 +36668,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "bbbac937",
+   "id": "eb5604fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36678,7 +36678,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "2661d526",
+   "id": "6da6cdeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36688,7 +36688,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "faa3b242",
+   "id": "29a6fdba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36700,7 +36700,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "731836de",
+   "id": "eb4cc3d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36718,7 +36718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d60004a0",
+   "id": "c465b723",
    "metadata": {},
    "source": [
     "## Let's combine the results of all approaches together"
@@ -36727,7 +36727,7 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "id": "d361b064",
+   "id": "23ee903f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36737,7 +36737,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "7a9dfd4a",
+   "id": "c238ec5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36748,7 +36748,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "8bff7394",
+   "id": "56f627e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36765,7 +36765,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "557bc6a4",
+   "id": "65f4f175",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36775,7 +36775,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "1300c646",
+   "id": "b6dc4173",
    "metadata": {},
    "outputs": [
     {
@@ -36923,7 +36923,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "eb1db0e0",
+   "id": "6b7bf44c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36933,7 +36933,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "id": "c2413065",
+   "id": "889576a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36942,7 +36942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30d3b01a",
+   "id": "4e103a37",
    "metadata": {},
    "source": [
     "## 6 to 101 difference"
@@ -36951,7 +36951,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "86ec9d8b",
+   "id": "31acf89c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36965,7 +36965,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "6b09cdfe",
+   "id": "0030fa64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36975,7 +36975,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "e7ae4e5c",
+   "id": "3dce76c6",
    "metadata": {},
    "outputs": [
     {
@@ -55152,7 +55152,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "1af8d168",
+   "id": "b83b745a",
    "metadata": {},
    "outputs": [
     {
@@ -69556,7 +69556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19365240",
+   "id": "13a4b335",
    "metadata": {},
    "source": [
     "# Random Sampling"
@@ -69564,8 +69564,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
-   "id": "296507fc",
+   "execution_count": 2,
+   "id": "6dac8947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69575,8 +69575,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
-   "id": "28e14738",
+   "execution_count": 3,
+   "id": "04d08992",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69593,7 +69593,7 @@
   {
    "cell_type": "code",
    "execution_count": 258,
-   "id": "a3f5185a",
+   "id": "2353d336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69607,7 +69607,7 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "id": "2bb7fc2b",
+   "id": "9e293256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69615,9 +69615,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fdd03e4a",
+   "metadata": {},
+   "source": [
+    "## Analysing the Random Sample Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 392,
-   "id": "c94ddfba",
+   "id": "2f030835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69627,7 +69635,7 @@
   {
    "cell_type": "code",
    "execution_count": 393,
-   "id": "1c2b7281",
+   "id": "f27991d9",
    "metadata": {},
    "outputs": [
     {
@@ -69724,7 +69732,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "02c69da3",
+   "id": "ec65a28a",
    "metadata": {},
    "outputs": [
     {
@@ -69757,7 +69765,7 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "id": "e61ecd0b",
+   "id": "4a548e59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69767,7 +69775,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "id": "094a8330",
+   "id": "1a9f0e85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69777,7 +69785,7 @@
   {
    "cell_type": "code",
    "execution_count": 397,
-   "id": "4aa742a3",
+   "id": "5e700d6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69794,7 +69802,7 @@
   {
    "cell_type": "code",
    "execution_count": 398,
-   "id": "904173bf",
+   "id": "19aee825",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69805,7 +69813,7 @@
   {
    "cell_type": "code",
    "execution_count": 399,
-   "id": "0415309c",
+   "id": "4bca37bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69816,7 +69824,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "f05ffe3c",
+   "id": "a3d539b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69829,7 +69837,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "8c9d5116",
+   "id": "266eef57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69839,7 +69847,7 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "id": "3e5b41cc",
+   "id": "73b4021f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69849,7 +69857,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "67c3233e",
+   "id": "4dcda352",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69860,7 +69868,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "4012b910",
+   "id": "06dc2496",
    "metadata": {},
    "outputs": [
     {
@@ -69887,7 +69895,7 @@
   {
    "cell_type": "code",
    "execution_count": 433,
-   "id": "9122bf23",
+   "id": "27d02fd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69897,7 +69905,7 @@
   {
    "cell_type": "code",
    "execution_count": 437,
-   "id": "eaff52cf",
+   "id": "605bbb67",
    "metadata": {},
    "outputs": [
     {
@@ -69925,7 +69933,7 @@
   {
    "cell_type": "code",
    "execution_count": 434,
-   "id": "61c18ee3",
+   "id": "76669746",
    "metadata": {},
    "outputs": [
     {
@@ -70130,7 +70138,7 @@
   {
    "cell_type": "code",
    "execution_count": 409,
-   "id": "baedef33",
+   "id": "89126eb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70142,7 +70150,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "id": "40795f61",
+   "id": "6df5d8c3",
    "metadata": {},
    "outputs": [
     {
@@ -70163,7 +70171,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "id": "2dc1cd67",
+   "id": "005e843c",
    "metadata": {},
    "outputs": [
     {
@@ -70281,7 +70289,7 @@
   {
    "cell_type": "code",
    "execution_count": 413,
-   "id": "dc4f9fc2",
+   "id": "bfb7449a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70300,7 +70308,7 @@
   {
    "cell_type": "code",
    "execution_count": 422,
-   "id": "aa648b01",
+   "id": "d4d7bd3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70319,7 +70327,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
-   "id": "0d54aeb5",
+   "id": "1c21a5e2",
    "metadata": {},
    "outputs": [
     {
@@ -70349,7 +70357,7 @@
   {
    "cell_type": "code",
    "execution_count": 428,
-   "id": "a4e87590",
+   "id": "3e995a28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70359,7 +70367,7 @@
   {
    "cell_type": "code",
    "execution_count": 429,
-   "id": "5a68d54d",
+   "id": "f78582fb",
    "metadata": {},
    "outputs": [
     {
@@ -70449,7 +70457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fb391ce",
+   "id": "748ca22b",
    "metadata": {},
    "outputs": [],
    "source": []
