new architectures running

--- a/notebooks/swis_random_sample_results.ipynb
+++ b/notebooks/swis_random_sample_results.ipynb
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "7bb35829",
    "metadata": {},
    "outputs": [
@@ -1117,6 +1117,30 @@
        "      <td>0.152105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>concat_pc_with_grid_tcn2_with_batchnorm</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.260842</td>\n",
+       "      <td>0.246636</td>\n",
+       "      <td>0.053630</td>\n",
+       "      <td>0.185993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>concat_pc_with_grid_tcn2_with_layernorm</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.198420</td>\n",
+       "      <td>0.192576</td>\n",
+       "      <td>0.033174</td>\n",
+       "      <td>0.160740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>concat_pc_with_grid_tcn3</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.173473</td>\n",
+       "      <td>0.172374</td>\n",
+       "      <td>0.007831</td>\n",
+       "      <td>0.161368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>grid_conv_in_each_pc_seperately</th>\n",
        "      <th>pc</th>\n",
        "      <td>0.160594</td>\n",
@@ -1145,28 +1169,34 @@
        "</div>"
       ],
       "text/plain": [
-       "                                            error                      \\\n",
-       "                                             mean    median       std   \n",
-       "model_name                        Level                                 \n",
-       "SWIS_APPROACH_A_with_weather_only grid   0.209063  0.199585  0.023738   \n",
-       "concat_pc_with_grid_tcn           grid   0.175837  0.176203  0.005134   \n",
-       "concat_pc_with_grid_tcn2          grid   0.168919  0.166838  0.012649   \n",
-       "grid_conv_in_each_pc_seperately   pc     0.160594  0.161032  0.005980   \n",
-       "pc_2d_conv_with_grid_tcn          grid   0.270816  0.268378  0.017586   \n",
-       "pc_2d_conv_with_grid_tcn_method2  grid   0.212163  0.211519  0.014281   \n",
+       "                                                  error                      \\\n",
+       "                                                   mean    median       std   \n",
+       "model_name                              Level                                 \n",
+       "SWIS_APPROACH_A_with_weather_only       grid   0.209063  0.199585  0.023738   \n",
+       "concat_pc_with_grid_tcn                 grid   0.175837  0.176203  0.005134   \n",
+       "concat_pc_with_grid_tcn2                grid   0.168919  0.166838  0.012649   \n",
+       "concat_pc_with_grid_tcn2_with_batchnorm grid   0.260842  0.246636  0.053630   \n",
+       "concat_pc_with_grid_tcn2_with_layernorm grid   0.198420  0.192576  0.033174   \n",
+       "concat_pc_with_grid_tcn3                grid   0.173473  0.172374  0.007831   \n",
+       "grid_conv_in_each_pc_seperately         pc     0.160594  0.161032  0.005980   \n",
+       "pc_2d_conv_with_grid_tcn                grid   0.270816  0.268378  0.017586   \n",
+       "pc_2d_conv_with_grid_tcn_method2        grid   0.212163  0.211519  0.014281   \n",
        "\n",
-       "                                                   \n",
-       "                                              min  \n",
-       "model_name                        Level            \n",
-       "SWIS_APPROACH_A_with_weather_only grid   0.183421  \n",
-       "concat_pc_with_grid_tcn           grid   0.168053  \n",
-       "concat_pc_with_grid_tcn2          grid   0.152105  \n",
-       "grid_conv_in_each_pc_seperately   pc     0.151910  \n",
-       "pc_2d_conv_with_grid_tcn          grid   0.246424  \n",
-       "pc_2d_conv_with_grid_tcn_method2  grid   0.189008  "
+       "                                                         \n",
+       "                                                    min  \n",
+       "model_name                              Level            \n",
+       "SWIS_APPROACH_A_with_weather_only       grid   0.183421  \n",
+       "concat_pc_with_grid_tcn                 grid   0.168053  \n",
+       "concat_pc_with_grid_tcn2                grid   0.152105  \n",
+       "concat_pc_with_grid_tcn2_with_batchnorm grid   0.185993  \n",
+       "concat_pc_with_grid_tcn2_with_layernorm grid   0.160740  \n",
+       "concat_pc_with_grid_tcn3                grid   0.161368  \n",
+       "grid_conv_in_each_pc_seperately         pc     0.151910  \n",
+       "pc_2d_conv_with_grid_tcn                grid   0.246424  \n",
+       "pc_2d_conv_with_grid_tcn_method2        grid   0.189008  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1b9d8ce5",
+   "id": "3b1f7907",
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fbb281ec",
+   "id": "1a6b8e3b",
    "metadata": {},
    "outputs": [
     {
