approach A with clustering

--- a/notebooks/swis_random_sample_results.ipynb
+++ b/notebooks/swis_random_sample_results.ipynb
@@ -14,7 +14,144 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d701f17b",
+   "id": "5067c038",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a679f05e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">error</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model_name</th>\n",
+       "      <th>Level</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>concat_pc_with_grid_tcn2_for_cluster</th>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.150190</td>\n",
+       "      <td>0.150522</td>\n",
+       "      <td>0.007301</td>\n",
+       "      <td>0.139596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>grid_conv_in_each_pc_seperately</th>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.160594</td>\n",
+       "      <td>0.161032</td>\n",
+       "      <td>0.005980</td>\n",
+       "      <td>0.151910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>concat_pc_with_grid_tcn2</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.168919</td>\n",
+       "      <td>0.166838</td>\n",
+       "      <td>0.012649</td>\n",
+       "      <td>0.152105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SWIS_APPROACH_A_more_layer_without_norm</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.172150</td>\n",
+       "      <td>0.169410</td>\n",
+       "      <td>0.009501</td>\n",
+       "      <td>0.159659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>concat_pc_with_grid_tcn3</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.173473</td>\n",
+       "      <td>0.172374</td>\n",
+       "      <td>0.007831</td>\n",
+       "      <td>0.161368</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  error                      \\\n",
+       "                                                   mean    median       std   \n",
+       "model_name                              Level                                 \n",
+       "concat_pc_with_grid_tcn2_for_cluster    pc     0.150190  0.150522  0.007301   \n",
+       "grid_conv_in_each_pc_seperately         pc     0.160594  0.161032  0.005980   \n",
+       "concat_pc_with_grid_tcn2                grid   0.168919  0.166838  0.012649   \n",
+       "SWIS_APPROACH_A_more_layer_without_norm grid   0.172150  0.169410  0.009501   \n",
+       "concat_pc_with_grid_tcn3                grid   0.173473  0.172374  0.007831   \n",
+       "\n",
+       "                                                         \n",
+       "                                                    min  \n",
+       "model_name                              Level            \n",
+       "concat_pc_with_grid_tcn2_for_cluster    pc     0.139596  \n",
+       "grid_conv_in_each_pc_seperately         pc     0.151910  \n",
+       "concat_pc_with_grid_tcn2                grid   0.152105  \n",
+       "SWIS_APPROACH_A_more_layer_without_norm grid   0.159659  \n",
+       "concat_pc_with_grid_tcn3                grid   0.161368  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "errors = pd.read_csv('../swis_combined_nn_results/all_fc_errors.csv', index_col=0)\n",
+    "\n",
+    "errors = errors.groupby(['model_name','Level']).agg({'error': ['mean', 'median', 'std', 'min']})\n",
+    "\n",
+    "errors.sort_values(by =('error', 'mean'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95db9557",
    "metadata": {},
    "source": [
     "## New Results with Different Architectures"
@@ -23,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d34c5b06",
+   "id": "9b567ca8",
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3945303e",
+   "id": "dc57c272",
    "metadata": {},
    "outputs": [],
    "source": []
