running models with weather centroid data

--- a/notebooks/results_analysis.ipynb
+++ b/notebooks/results_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "06857820",
+   "id": "e8e8b361",
    "metadata": {},
    "source": [
     "## Cluster Data Approach"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fc1dc1d3",
+   "id": "fdef11c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "63db5f29",
+   "id": "bd107e62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f2372a6e",
+   "id": "d102eec4",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "01c9bd28",
+   "id": "803fec24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "207b205d",
+   "id": "c4763259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "86639277",
+   "id": "f8e13616",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,8 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "8b6c29bf",
+   "execution_count": 58,
+   "id": "8a4915b8",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "5  6008           29"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b3363ee1",
+   "id": "89171a2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1c4f1ff9",
+   "id": "29ea50f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,8 +402,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "0f344af8",
+   "execution_count": 59,
+   "id": "bf2b7f9f",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        " 26: [6528, 6530]}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "5373f74f",
+   "id": "dede1030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,6 +534,150 @@
     "        save_data = pd.concat([power_df, day2_df, day3_df, day4_df, day5_df, day6_df, day7_df], axis=1).round(2)\n",
     "        save_data.to_csv(f'../swis_ts_data/ts_data/cluster_{key}.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea7fdbe6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a2c4655d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{6000: 29,\n",
+       " 6005: 29,\n",
+       " 6006: 4,\n",
+       " 6007: 4,\n",
+       " 6008: 29,\n",
+       " 6009: 29,\n",
+       " 6010: 29,\n",
+       " 6011: 29,\n",
+       " 6014: 4,\n",
+       " 6015: 4,\n",
+       " 6017: 4,\n",
+       " 6018: 4,\n",
+       " 6019: 4,\n",
+       " 6020: 4,\n",
+       " 6021: 4,\n",
+       " 6023: 4,\n",
+       " 6024: 4,\n",
+       " 6025: 4,\n",
+       " 6026: 4,\n",
+       " 6027: 4,\n",
+       " 6028: 0,\n",
+       " 6029: 4,\n",
+       " 6030: 0,\n",
+       " 6035: 0,\n",
+       " 6036: 0,\n",
+       " 6038: 0,\n",
+       " 6041: 0,\n",
+       " 6050: 4,\n",
+       " 6053: 4,\n",
+       " 6054: 4,\n",
+       " 6055: 21,\n",
+       " 6056: 21,\n",
+       " 6058: 21,\n",
+       " 6059: 4,\n",
+       " 6061: 4,\n",
+       " 6062: 4,\n",
+       " 6063: 4,\n",
+       " 6064: 4,\n",
+       " 6065: 4,\n",
+       " 6066: 4,\n",
+       " 6069: 21,\n",
+       " 6073: 21,\n",
+       " 6084: 21,\n",
+       " 6090: 4,\n",
+       " 6101: 29,\n",
+       " 6102: 29,\n",
+       " 6103: 29,\n",
+       " 6104: 29,\n",
+       " 6105: 29,\n",
+       " 6107: 29,\n",
+       " 6108: 29,\n",
+       " 6109: 29,\n",
+       " 6110: 29,\n",
+       " 6111: 21,\n",
+       " 6112: 20,\n",
+       " 6123: 20,\n",
+       " 6147: 29,\n",
+       " 6148: 29,\n",
+       " 6149: 29,\n",
+       " 6150: 29,\n",
+       " 6151: 29,\n",
+       " 6152: 29,\n",
+       " 6153: 29,\n",
+       " 6154: 29,\n",
+       " 6155: 29,\n",
+       " 6157: 29,\n",
+       " 6159: 29,\n",
+       " 6162: 29,\n",
+       " 6163: 29,\n",
+       " 6164: 29,\n",
+       " 6166: 29,\n",
+       " 6167: 20,\n",
+       " 6168: 20,\n",
+       " 6170: 20,\n",
+       " 6171: 20,\n",
+       " 6173: 14,\n",
+       " 6208: 14,\n",
+       " 6210: 14,\n",
+       " 6211: 14,\n",
+       " 6220: 27,\n",
+       " 6230: 18,\n",
+       " 6232: 18,\n",
+       " 6233: 27,\n",
+       " 6237: 18,\n",
+       " 6254: 2,\n",
+       " 6271: 18,\n",
+       " 6280: 28,\n",
+       " 6281: 28,\n",
+       " 6284: 13,\n",
+       " 6312: 17,\n",
+       " 6317: 19,\n",
+       " 6324: 10,\n",
+       " 6330: 10,\n",
+       " 6391: 25,\n",
+       " 6401: 15,\n",
+       " 6426: 16,\n",
+       " 6430: 3,\n",
+       " 6432: 3,\n",
+       " 6509: 24,\n",
+       " 6528: 26,\n",
+       " 6530: 26}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pc_cluster_map = {}\n",
+    "\n",
+    "for pc in range(len(cluster_num)):\n",
+    "    pc_num = cluster_num.iloc[pc,]['pc']\n",
+    "    cluster_val = cluster_num.iloc[pc,]['cluster_num']\n",
+    "    pc_cluster_map[pc_num] = cluster_val\n",
+    "    \n",
+    "pc_cluster_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f0951ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
