--- a/notebooks/swis_random_sample_results.ipynb
+++ b/notebooks/swis_random_sample_results.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5067c038",
+   "id": "b934827c",
    "metadata": {},
    "source": [
     "## Summary"
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "a679f05e",
+   "execution_count": 31,
+   "id": "48907baa",
    "metadata": {},
    "outputs": [
     {
@@ -81,6 +81,14 @@
        "      <td>0.139596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>SWIS_APPROACH_A_more_layer_without_norm_cluster</th>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.158302</td>\n",
+       "      <td>0.158817</td>\n",
+       "      <td>0.005791</td>\n",
+       "      <td>0.148121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>grid_conv_in_each_pc_seperately</th>\n",
        "      <th>pc</th>\n",
        "      <td>0.160594</td>\n",
@@ -117,26 +125,28 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                  error                      \\\n",
-       "                                                   mean    median       std   \n",
-       "model_name                              Level                                 \n",
-       "concat_pc_with_grid_tcn2_for_cluster    pc     0.150190  0.150522  0.007301   \n",
-       "grid_conv_in_each_pc_seperately         pc     0.160594  0.161032  0.005980   \n",
-       "concat_pc_with_grid_tcn2                grid   0.168919  0.166838  0.012649   \n",
-       "SWIS_APPROACH_A_more_layer_without_norm grid   0.172150  0.169410  0.009501   \n",
-       "concat_pc_with_grid_tcn3                grid   0.173473  0.172374  0.007831   \n",
+       "                                                          error            \\\n",
+       "                                                           mean    median   \n",
+       "model_name                                      Level                       \n",
+       "concat_pc_with_grid_tcn2_for_cluster            pc     0.150190  0.150522   \n",
+       "SWIS_APPROACH_A_more_layer_without_norm_cluster pc     0.158302  0.158817   \n",
+       "grid_conv_in_each_pc_seperately                 pc     0.160594  0.161032   \n",
+       "concat_pc_with_grid_tcn2                        grid   0.168919  0.166838   \n",
+       "SWIS_APPROACH_A_more_layer_without_norm         grid   0.172150  0.169410   \n",
+       "concat_pc_with_grid_tcn3                        grid   0.173473  0.172374   \n",
        "\n",
-       "                                                         \n",
-       "                                                    min  \n",
-       "model_name                              Level            \n",
-       "concat_pc_with_grid_tcn2_for_cluster    pc     0.139596  \n",
-       "grid_conv_in_each_pc_seperately         pc     0.151910  \n",
-       "concat_pc_with_grid_tcn2                grid   0.152105  \n",
-       "SWIS_APPROACH_A_more_layer_without_norm grid   0.159659  \n",
-       "concat_pc_with_grid_tcn3                grid   0.161368  "
+       "                                                                           \n",
+       "                                                            std       min  \n",
+       "model_name                                      Level                      \n",
+       "concat_pc_with_grid_tcn2_for_cluster            pc     0.007301  0.139596  \n",
+       "SWIS_APPROACH_A_more_layer_without_norm_cluster pc     0.005791  0.148121  \n",
+       "grid_conv_in_each_pc_seperately                 pc     0.005980  0.151910  \n",
+       "concat_pc_with_grid_tcn2                        grid   0.012649  0.152105  \n",
+       "SWIS_APPROACH_A_more_layer_without_norm         grid   0.009501  0.159659  \n",
+       "concat_pc_with_grid_tcn3                        grid   0.007831  0.161368  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95db9557",
+   "id": "8b23dc16",
    "metadata": {},
    "source": [
     "## New Results with Different Architectures"
@@ -160,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9b567ca8",
+   "id": "a7807d7b",
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc57c272",
+   "id": "3689f470",
    "metadata": {},
    "outputs": [],
    "source": []
