running 2d conv model

--- a/notebooks/swis_random_sample_results.ipynb
+++ b/notebooks/swis_random_sample_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "7ab33492",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b934827c",
+   "id": "641b6735",
    "metadata": {},
    "source": [
     "## Summary"
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "48907baa",
+   "execution_count": 33,
+   "id": "dc74c05b",
    "metadata": {},
    "outputs": [
     {
@@ -89,12 +89,12 @@
        "      <td>0.148121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>grid_conv_in_each_pc_seperately</th>\n",
+       "      <th>conventional_TCN_approach</th>\n",
        "      <th>pc</th>\n",
-       "      <td>0.160594</td>\n",
-       "      <td>0.161032</td>\n",
-       "      <td>0.005980</td>\n",
-       "      <td>0.151910</td>\n",
+       "      <td>0.164669</td>\n",
+       "      <td>0.164631</td>\n",
+       "      <td>0.005476</td>\n",
+       "      <td>0.155454</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>concat_pc_with_grid_tcn2</th>\n",
@@ -105,6 +105,14 @@
        "      <td>0.152105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>concat_pc_with_grid_tcn2_weather_centroids</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.171310</td>\n",
+       "      <td>0.169112</td>\n",
+       "      <td>0.006951</td>\n",
+       "      <td>0.163393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>SWIS_APPROACH_A_more_layer_without_norm</th>\n",
        "      <th>grid</th>\n",
        "      <td>0.172150</td>\n",
@@ -113,40 +121,42 @@
        "      <td>0.159659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>concat_pc_with_grid_tcn3</th>\n",
+       "      <th>SWIS_APPROACH_A_more_layer_without_norm_weather_centroids</th>\n",
        "      <th>grid</th>\n",
-       "      <td>0.173473</td>\n",
-       "      <td>0.172374</td>\n",
-       "      <td>0.007831</td>\n",
-       "      <td>0.161368</td>\n",
+       "      <td>0.173627</td>\n",
+       "      <td>0.172646</td>\n",
+       "      <td>0.008558</td>\n",
+       "      <td>0.162102</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                          error            \\\n",
-       "                                                           mean    median   \n",
-       "model_name                                      Level                       \n",
-       "concat_pc_with_grid_tcn2_for_cluster            pc     0.150190  0.150522   \n",
-       "SWIS_APPROACH_A_more_layer_without_norm_cluster pc     0.158302  0.158817   \n",
-       "grid_conv_in_each_pc_seperately                 pc     0.160594  0.161032   \n",
-       "concat_pc_with_grid_tcn2                        grid   0.168919  0.166838   \n",
-       "SWIS_APPROACH_A_more_layer_without_norm         grid   0.172150  0.169410   \n",
-       "concat_pc_with_grid_tcn3                        grid   0.173473  0.172374   \n",
+       "                                                             error            \\\n",
+       "                                                              mean    median   \n",
+       "model_name                                         Level                       \n",
+       "concat_pc_with_grid_tcn2_for_cluster               pc     0.150190  0.150522   \n",
+       "SWIS_APPROACH_A_more_layer_without_norm_cluster    pc     0.158302  0.158817   \n",
+       "conventional_TCN_approach                          pc     0.164669  0.164631   \n",
+       "concat_pc_with_grid_tcn2                           grid   0.168919  0.166838   \n",
+       "concat_pc_with_grid_tcn2_weather_centroids         grid   0.171310  0.169112   \n",
+       "SWIS_APPROACH_A_more_layer_without_norm            grid   0.172150  0.169410   \n",
+       "SWIS_APPROACH_A_more_layer_without_norm_weather... grid   0.173627  0.172646   \n",
        "\n",
-       "                                                                           \n",
-       "                                                            std       min  \n",
-       "model_name                                      Level                      \n",
-       "concat_pc_with_grid_tcn2_for_cluster            pc     0.007301  0.139596  \n",
-       "SWIS_APPROACH_A_more_layer_without_norm_cluster pc     0.005791  0.148121  \n",
-       "grid_conv_in_each_pc_seperately                 pc     0.005980  0.151910  \n",
-       "concat_pc_with_grid_tcn2                        grid   0.012649  0.152105  \n",
-       "SWIS_APPROACH_A_more_layer_without_norm         grid   0.009501  0.159659  \n",
-       "concat_pc_with_grid_tcn3                        grid   0.007831  0.161368  "
+       "                                                                              \n",
+       "                                                               std       min  \n",
+       "model_name                                         Level                      \n",
+       "concat_pc_with_grid_tcn2_for_cluster               pc     0.007301  0.139596  \n",
+       "SWIS_APPROACH_A_more_layer_without_norm_cluster    pc     0.005791  0.148121  \n",
+       "conventional_TCN_approach                          pc     0.005476  0.155454  \n",
+       "concat_pc_with_grid_tcn2                           grid   0.012649  0.152105  \n",
+       "concat_pc_with_grid_tcn2_weather_centroids         grid   0.006951  0.163393  \n",
+       "SWIS_APPROACH_A_more_layer_without_norm            grid   0.009501  0.159659  \n",
+       "SWIS_APPROACH_A_more_layer_without_norm_weather... grid   0.008558  0.162102  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b23dc16",
+   "id": "5287d747",
    "metadata": {},
    "source": [
     "## New Results with Different Architectures"
@@ -170,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a7807d7b",
+   "id": "2082242c",
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3689f470",
+   "id": "06a4c68f",
    "metadata": {},
    "outputs": [],
    "source": []
